<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name" translatable="false">Spotify Streamer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_top_tracks">Top 10 tracks</string>
    <string name="title_activity_preference">Settings</string>

    <!-- Toast messages -->
    <string name="connection_needed">No connection available</string>
    <string name="refine_search">Please refine search, no results found</string>
    <string name="no_top_tracks">No top tracks for this artist !</string>
    <string name="album_thumbnail">Thumbnail of the album</string>
    <string name="previous">Previous button</string>
    <string name="next">Next button</string>
    <string name="play_pause">Play Pause button</string>
    <string name="title_activity_now_playing">Now playing</string>
    <string name="now_playing">Now playing....</string>
    <string name="format_time" translatable="false"><xliff:g id="min">%1$02d</xliff:g>:<xliff:g id="sec">%2$02d</xliff:g></string>
    <string name="action_now_playing">Now playing...</string>

    <!-- Strings related to Country code preference -->
    <string name="pref_country_code_default" translatable="false">us</string>
    <string name="pref_country_code_key" translatable="false">country_code</string>
    <string name="pref_country_code_label">Pick your country</string>
    <string-array name="pref_country_code_values" translatable="false">
        <item>France</item>
        <item>USA</item>
    </string-array>
    <string-array name="pref_country_code_keys" translatable="false">
        <item>fr</item>
        <item>us</item>
    </string-array>

    <!-- Strings related to Notification controls Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Notifications controls on lock screen</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="share">Share</string>
</resources>
